--- a/my_snippets/package.json
+++ b/my_snippets/package.json
@@ -1,24 +1,13 @@
 {
-  "name": "example-snippets",
+  "name": "my-snippets",
   "contributes": {
     "snippets": [
       {
-        "language": [
-          "all"
-        ],
-        "path": "./snippets/all.json"
+        "language": "vue",
+        "path": "./vue.json"
       },
       {
-        "language": [
-          "lua"
-        ],
-        "path": "./lua.json"
-      },
-      {
-        "language": [
-          "typescript",
-          "javascript"
-        ],
+        "language": "javascript",
         "path": "./javascript.json"
       }
     ]
